--- a/firstTruffleDemo/src/index.html
+++ b/firstTruffleDemo/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>First Truffle DApp Demo</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./main.css">
 
 </head>
 <body>
@@ -25,10 +25,10 @@
 
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/web3.min.js"></script>
+    <script src="./js/truffle-contract.min.js"></script>
+    <script src="./js/app.js"></script>
 
 </body>
 </html>
